--- a/src/Infrastructure/Alphiq.Infrastructure.Supabase/Alphiq.Infrastructure.Supabase.csproj
+++ b/src/Infrastructure/Alphiq.Infrastructure.Supabase/Alphiq.Infrastructure.Supabase.csproj
@@ -11,5 +11,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
   </ItemGroup>
 </Project>
